SG-2003-12-08-0: Bugfix:    Storing a job template in qmon set -hold_jid to
                            the wrong value (always 0)
                 Review:    AA
                 Changed:   qmon

AS-2003-11-29-0: CVS        Created V53p5_TAG (linkage with OpenSSL 0.9.7c)
---------------------------------------------------------------------------

AA-2003-11-13-0  Bugfix:    qmon dumps core if it gets an empty hold list
                 Review:    EB
                 Issue:     
                 Bugtraq:   4949917
                 Changed:   qmon

EB-2003-11-13-0  Bugfix:    qmon cores if it should show qtcsh jobs which
                            where submitted with -h parameter (qtask-file)
                 Review:    AA
                 Issue:
                 Bugtraq:   4949917
                 Changed:   qsh, qrsh, qtcsh

SD-2003-11-12-0: Bugfix:    Fixed problem reading in qmaster_param 
                            halflife_decay_list
                            from the cluster configuration
                 Changed:   sge_qmaster

JG-2003-11-11-0: Bugfix:    -M options didn't work for interactive commands
                            (qsh, qrsh, qlogin). The man page was incorrect.
                 Bugtraq:   4952236
                 Issue:     617
                 Changed:   qsh, submit.1

                 Bugfix:    -notify didn't work for qrsh with command.
                            The man page was incorrect: -notify is not available
                            for qsh, qlogin and qrsh without command
                 Bugtraq:   4952767
                 Issue:     619
                 Changed:   qsh, submit.1

JG-2003-10-17-0: Bugfix:    Fixed the build for the new solaris x86 compiler.

AA-2003-10-22-0: Security:  OpenSSL 0.9.7c replaces OpenSSL 0.9.7a 
                 Bugtraq:   4957760
                 Issue:     626
                 Changed:   all binaries
                 Review:    AS
