@@ -5,7 +5,7 @@
 .\"
 .\"___INFO__MARK_END__
 .\"
-.\" $RCSfile: submit.1,v $     Last Update: $Date: 2003/11/12 09:52:52 $     Revision: $Revision: 1.9.2.13 $
+.\" $RCSfile: submit.1,v $     Last Update: $Date: 2003/12/10 13:58:53 $     Revision: $Revision: 1.9.2.14 $
 .\"
 .\"
 .\" Some handy macro definitions [from Tom Christensen's man(1) manual page].
@@ -30,7 +30,7 @@
 .de M		\" man page reference
 \\fI\\$1\\fR\\|(\\$2)\\$3
 ..
-.TH SUBMIT 1 "$Date: 2003/11/12 09:52:52 $" "xxRELxx" "xxQS_NAMExx User Commands"
+.TH SUBMIT 1 "$Date: 2003/12/10 13:58:53 $" "xxRELxx" "xxQS_NAMExx User Commands"
 .SH NAME
 .IP "qsub   \-" 1i
 submit a batch job to xxQS_NAMExx.
@@ -663,8 +663,7 @@ however.
 Prints  a listing of all options.
 .\"
 .IP "\fB\-hold_jid [job_id|job_name],...\fP"
-Available for \fIqsub\fP, \fIqsh\fP, \fIqrsh\fP, \fIqlogin\fP and
-\fIqalter\fP only.
+Available for \fIqsub\fP, \fIqrsh\fP, and \fIqalter\fP only.
 .sp 1
 Defines or redefines the job dependency list of the submitted job. A 
 reference by job name is only accepted if the referenced job is owend
